# crab2d

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  project.crab2d.json
.github/workflows/: ci.yml  rust.yml
apps/crab2d-editor/: Cargo.toml
apps/crab2d-editor/src/: editor_assets.rs  editor_theme.rs  editor_ui.rs  editor_widgets.rs  main.rs
apps/crab2d-editor/src/editor_ui/: bottom_dock.rs  dialogs.rs  drawing.rs  inspector.rs  inspector_add.rs  inspector_basic.rs  inspector_components.rs  inspector_future.rs  inspector_gameplay.rs  node_meta.rs  scene_editing.rs  scene_panel.rs  top_bar.rs  types.rs  utils.rs  viewport.rs  viewport_hit_test.rs  viewport_overlay.rs  viewport_render.rs  workspace.rs
apps/crab2d-runtime/: Cargo.toml
apps/crab2d-runtime/src/: app.rs  assets.rs  input.rs  main.rs  renderer.rs  scene_defaults.rs  scripting.rs
crates/crab2d-ai/: Cargo.toml
crates/crab2d-ai/src/: anthropic.rs  error.rs  game_ai.rs  lib.rs  openai.rs  prompts.rs  provider.rs
crates/crab2d-assets/: Cargo.toml
crates/crab2d-assets/src/: asset_id.rs  asset_kind.rs  asset_markers.rs  asset_record.rs  asset_registry.rs  lib.rs  typed_id.rs
crates/crab2d-core/: Cargo.toml
crates/crab2d-core/src/: animation_system.rs  asset_pipeline.rs  audio_system.rs  config.rs  engine.rs  game_flow.rs  lib.rs  particle_system.rs  playtest.rs  project.rs  project_document.rs  runtime_systems.rs  save_system.rs  scene_manager.rs  script_runtime.rs
crates/crab2d-editor/: Cargo.toml
crates/crab2d-editor/src/: app.rs  command_history.rs  editor_command.rs  editor_mode.rs  lib.rs  project_bootstrap.rs  project_session.rs  starter_scene_builder.rs
crates/crab2d-platform/: Cargo.toml
crates/crab2d-platform/src/: headless_shell.rs  input_state.rs  key_code.rs  lib.rs  platform_event.rs  platform_shell.rs
crates/crab2d-plugin-api/: Cargo.toml
crates/crab2d-plugin-api/src/: engine_context.rs  lib.rs  plugin.rs
crates/crab2d-procgen/: Cargo.toml
crates/crab2d-procgen/src/: generation_settings.rs  grid_map.rs  lib.rs  starter_village_generator.rs  tile_kind.rs  world_generator.rs
crates/crab2d-render/: Cargo.toml
crates/crab2d-render/src/: lib.rs  null_renderer.rs  render_list.rs  render_stats.rs  renderer.rs
crates/crab2d-scene/: Cargo.toml
crates/crab2d-scene/src/: animation_component.rs  audio_component.rs  behavior_component.rs  camera_component.rs  camera_follow_component.rs  collider_component.rs  entity_id.rs  lib.rs  math.rs  node.rs  particle_component.rs  physics_settings.rs  player_controller_component.rs  prefab.rs  scene.rs  scene_components.rs  sprite_component.rs  tag_component.rs  tilemap_component.rs  transform.rs  trigger_component.rs  ui_component.rs  velocity_component.rs
docs/: ARCHITECTURE.md  BEHAVIOR_SYSTEM_ROADMAP.md  COMPONENTS.md  DEVELOPMENT_LOG.md  PROJECT_PHILOSOPHY.md  RUNTIME_MVP.md  TILEMAP_AND_ASSET_BROWSER.md
projects/UntitledProject/: project.crab2d.json
tests/crab2d-integration/: Cargo.toml
tests/crab2d-integration/src/: lib.rs  test_camera_follow.rs  test_engine_lifecycle.rs  test_hot_reload.rs  test_prefabs.rs  test_script_errors.rs
