[package]
name = "crab2d-runtime-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
crab2d-core.workspace = true
crab2d-platform.workspace = true
crab2d-render.workspace = true
crab2d-scene.workspace = true
eframe = { version = "0.34", features = ["glow"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
