[package]
name = "crab2d-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
crab2d-assets.workspace = true
crab2d-platform.workspace = true
crab2d-plugin-api.workspace = true
crab2d-scene.workspace = true
serde.workspace = true
serde_json.workspace = true
rhai.workspace = true
rodio.workspace = true
uuid.workspace = true
rand.workspace = true
